--- a/app/views/welcome/elements.html.erb
+++ b/app/views/welcome/elements.html.erb
@@ -16,7 +16,7 @@
             <li class="active"><a href="/elements">Elements</a></li>
            
           </ul>
-          <form class="navbar-form navbar-right">
+         <!--  <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
             </div>
@@ -24,7 +24,7 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          </form> -->
         </div><!--/.nav-collapse -->
       </div>
     </nav>
