updated funcitonality of login and registration for company and client model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+<div class="container">
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |e| %>
+      <p><%= e %></p>
+    <% end %>
+  <% end %>
+
+  <% if flash[:success] %>
+    <p><%= flash[:success] %></p>
+  <% end %>
+</div>
+
 <%= yield %>
 
 
