fixed login registration issues and updated Company table column phone to be string

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,7 +1,7 @@
 
         <h1 class="text-center">Register for PayME!</h1>
         <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-center">
+          <div class="col-md-6 col-md-offset-3 text-center">
             
 
         	<form action="/companies" method="post">
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
               <label for="company[phone]">Phone:</label>
-              <input type="tel" name="company[phone]" class="form-control" placeholder="Phone" required />
+              <input type="string" name="company[phone]" class="form-control" placeholder="Phone" required />
             </div>
             <div class="form-group">
                <label for="company[address_line1]">Address:</label>
