Practiced tweaking styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,15 @@ body {
 	text-align: center
 }
 
+//#welcome_splash {
+//	color: white;
+//	font-weight: bold;
+//	background-image: url('splash_packing.jpg');
+//	background-size:     cover;                      
+//  background-repeat:   no-repeat;
+//    background-position: center center;
+//}
+
 footer {
 	text-align: center
 }
