--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
   </div>
-    <div class="jumbotron">
+    <div class="jumbotron" id="welcome_splash">
       <div class="container">
         <h1>PayME</h1>
         <p>Easily track invoices and get paid with PayME. Join today!</p>
