Added google maps api to Company Dashboard

--- a/app/views/dashboards/_dashboard_listing.html.erb
+++ b/app/views/dashboards/_dashboard_listing.html.erb
@@ -1,31 +1,34 @@
 <h1>Listing of all clients</h1>
+<% if @clients == [] %>
+	<h3>You currently have no clients.</h3>
+<% else %>
 <table class="table">
 	<thead>
 		<tr>
 			<td>Name</td>
+			<td>Email</td>
 			<td>Address</td>
 			<td>APT/STE</td>
 			<td>City</td>
 			<td>State</td>
 			<td>Zip Code</td>
 			<td>Phone Number</td>
-			<td>Email</td>
 		</tr>
 	</thead>
 	<tbody>
-		<% if @clients %>
-			<% @clients.each do |client| %></td>
 		<tr>
+	<% @clients.each do |client| %>
 			<td><%= client.name %></td>
-			<td><%= client.address_line1 %></td>
+			<td><%= client.email %></td>
+			<td><%= render 'modal', :client => client %></td>
 			<td><%= client.address_line2 %></td>
 			<td><%= client.city %></td>
 			<td><%= client.state %></td>
 			<td><%= client.zip %></td>
 			<td><%= client.phone %></td>
-			<td><%= client.email %></td>
 		</tr>
-	</tbody>
+
 	<% end %>
-<% end %>
+	</tbody>
 </table>
+<% end %>
