--- a/app/views/dashboards/_dashboard_paid.html.erb
+++ b/app/views/dashboards/_dashboard_paid.html.erb
@@ -1,4 +1,7 @@
 <h1>Listing of all Paid Invoices</h1>
+<% if @paidvoices == [] %>
+	<h3>You currently have no paid Invoices.</h3>
+<% else %>
 <table class="table">
 	<thead>
 		<tr>
@@ -8,9 +11,8 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% if @paidvoices %>
-			<% @paidvoices.each do |paid| %></td>
 		<tr>
+		<% @paidvoices.each do |paid| %></td>
 			<td><%= paid.client.name %></td>
 			<td><%= paid.amount %></td>
 			<td><%= paid.paid_date %></td>
