added modal function to the /companies page for 'listing of all clients'

--- a/app/views/application/_footer_basic.html.erb
+++ b/app/views/application/_footer_basic.html.erb
@@ -7,7 +7,7 @@
              <input type="hidden" name="_method" value="delete">
              <div class="form-group">
                <strong class="text-muted">Fail Safe (SESSION CLEAR) </strong>
-               <button type='submit' value='Log Out' class="btn btn-sm btn-default">Sign Out</button>
+               <button type='submit' value='Log Out' class="btn btn-sm btn-danger">SESSION CLEAR BUTTON</button>
              </div>
     </form> 
 <!-- end -->
