--- a/app/views/dashboards/_dashboard_addinvoice.html.erb
+++ b/app/views/dashboards/_dashboard_addinvoice.html.erb
@@ -17,33 +17,33 @@
 		    <% end %>
 		    </div>
 		    <!-- Add Product Form -->
-	    	<form action="/clients" method="post">
+	    	<form action="/invoices" method="post">
 	    		<%= token_tag nil %>
-	    		<input type="hidden" name="client[client_id]" value="<%=client.id %>">
-	    		<input type="hidden" name="client[company_id]" value="<%=session[:company_id] %>">
+	    		<input type="hidden" name="invoice[client_id]" value="<%=client.id %>">
+	    		<input type="hidden" name="invoice[company_id]" value="<%=session[:company_id] %>">
 	    		
 	    		<div class="form-group">
 	    			<label class="col-sm-3 control-label">Send Date</label>
 		    		<div class="col-sm-8">
-                        <input type="date" class="form-control" name="client[sendDate]"/>
+                        <input type="date" class="form-control" name="invoice[sendDate]"/>
                     </div>
 	    		</div>
 	    		<div class="form-group">
 	    			<label class="col-sm-3 control-label">Due By</label>
 		    		<div class="col-sm-8">
-                        <input type="date" class="form-control" name="client[due_by]"/>
+                        <input type="date" class="form-control" name="invoice[due_by]"/>
                     </div>
 	    		</div>
 	    		<div class="form-group">
 	    			<label class="col-sm-3 control-label">Description</label>
 		    		<div class="col-sm-8">
-                        <textarea type="text" class="form-control" name="client[description]"></textarea>
+                        <textarea type="text" class="form-control" name="invoice[description]"></textarea>
                     </div>
 	    		</div>
 	    		<div class="form-group">
 	    			<label class="col-sm-3 control-label">Amount</label>
 		    		<div class="col-sm-8">
-                        <input type="number" class="form-control" name="client[amount]"/>
+                        <input type="number" class="form-control" name="invoice[amount]"/>
                     </div>
 	    		</div>
 
