--- a/app/views/dashboards/_dashboard_listing.html.erb
+++ b/app/views/dashboards/_dashboard_listing.html.erb
@@ -19,8 +19,8 @@
 	</thead>
 
 	<tbody>
-		<tr>
 	<% @clients.each do |client| %>
+		<tr>
 			<td><%= client.name %></td>
 			<td><%= client.email %></td>
 			<td><%= render 'modal', :client => client %></td>
@@ -30,7 +30,7 @@
 			<td><%= client.zip %></td>
 			<td><%= client.phone %></td>
 			<td><%= client.email %></td>
-			<td><button class="addNewinvoice btn btn-sm-default pull-right" data-toggle="modal" data-target="#addModal" type="button">Send New Invoice
+			<td><button class="addNewinvoice btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#addModal" type="button">Send New Invoice
 				</button>
 				<%= render partial: "dashboard_addinvoice", locals: { client: client } %>
 			</td>
