--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,4 +1,8 @@
-<a href="/companies/clients/new">New Client</a>
+<div class="text-center">
+	<h1>Welcome Company!</h1>
+	<a href="/companies/clients/new" class="btn btn-lg btn-warning">+ New Client</a> 
+	<a href="/companies/invoices/new" class="btn btn-lg btn-success">+ New Invoice</a>
+</div>
 <%= render "dashboard_listing" %>
 <%= render "dashboard_unpaid" %>
 <%= render "dashboard_paid" %>
