--- a/app/views/dashboards/_dashboard_listing.html.erb
+++ b/app/views/dashboards/_dashboard_listing.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing of all clients</h1>
-<table class="table">
+<h2>Client List</h2>
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<td>Name</td>
 			<td>Address</td>
-			<td>APT/STE</td>
+			<td>APT/Suite</td>
 			<td>City</td>
 			<td>State</td>
 			<td>Zip Code</td>
