--- a/app/views/dashboards/_dashboard_paid.html.erb
+++ b/app/views/dashboards/_dashboard_paid.html.erb
@@ -1,5 +1,5 @@
-<h1>Listing of all Paid Invoices</h1>
-<table class="table">
+<h2>Paid Invoices</h2>
+<table class="table table-striped">
 	<thead>
 		<tr>
 			<td>Client Name</td>
