--- a/app/views/application/_nav_basic.html.erb
+++ b/app/views/application/_nav_basic.html.erb
@@ -36,7 +36,7 @@
              <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
              <input type="hidden" name="_method" value="delete">
              <div class="form-group">
-               <strong class="text-muted">Logged in as a Client </strong>
+               <strong class="text-muted text-login">Logged in as <%= @current_user.name %> </strong>
                <button type='submit' value='Log Out' class="btn btn-sm btn-default">Sign Out</button>
              </div>ccc
            </form> 
