--- a/app/views/dashboards/_dashboard_paid.html.erb
+++ b/app/views/dashboards/_dashboard_paid.html.erb
@@ -7,17 +7,21 @@
 		<tr>
 			<td>Client Name</td>
 			<td>Amount Paid</td>
+			<td>Stripe Payment ID</td>
+			<td>Check #</td>
 			<td>Date Paid</td>
 		</tr>
 	</thead>
 	<tbody>
+		<% @paidvoices.each do |paid| %>
 		<tr>
-		<% @paidvoices.each do |paid| %></td>
 			<td><%= paid.client.name %></td>
-			<td><%= paid.amount %></td>
+			<td>$<%= paid.amount %></td>
+			<td><%= paid.stripe_payment %></td>
+			<td><%= paid.check_payment %></td>
 			<td><%= paid.paid_date %></td>
 		</tr>
+		<% end %>
 	</tbody>
-	<% end %>
 <% end %>
 </table>
