--- a/app/views/dashboards/_dashboard_unpaid.html.erb
+++ b/app/views/dashboards/_dashboard_unpaid.html.erb
@@ -15,7 +15,7 @@
 		<tr>
 		<% @unpaidvoices.each do |unpaid| %></td>
 			<td><%= unpaid.client.name %></td>
-			<td><%= unpaid.amount %></td>
+			<td>$<%= unpaid.amount.to_f %></td>
 			<td><%= unpaid.sendDate %></td>
 			<td><%= unpaid.due_by %></td>
 		</tr>
