--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,93 +1,13 @@
-
-<h1>Clients#show</h1>
-<p>Find me in app/views/clients/show.html.erb</p>
-
-
-				<!-- add new product button via MODAL.js from bootstrap-->
-				<button class="addNewclient btn btn-primary pull-right" data-toggle="modal" data-target="#addModal" type="button">Add New Client
-				</button>
-				<!-- Modal for "Add New Product" -->
-				<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-					<div class="modal-dialog" role="document">
-					    <div class="modal-content">
-						    <div class="modal-header">
-						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						        <h4 class="modal-title" id="myModalLabel">Add New Client</h4>
-						    </div>
-						    <!-- Error check -->
-							<div class="has-error">
-<?php 						if($this->session->flashdata('success_message'))
-							{	?>
-								<div class="alert alert-success">
-									<?php echo $this->session->flashdata('success_message');?>
-								</div>	
-<?php 						}  ?>
-						    </div>
-						    <div>
-<?php 						if($this->session->flashdata('error_message'))
-							{	?>
-								<div class="alert alert-danger">
-									<?php echo $this->session->flashdata('error_message');?>
-								</div>	
-<?php 						}  ?>
-						    </div>
-						    <!-- Add Product Form -->
-					    	<form action="/Products/add_new_product" method="post" enctype="multipart/form-data">	
-					    		<div class="form-group">
-					    			<label class="col-sm-3 control-label">Name</label>
-						    		<div class="col-sm-8">
-				                        <input type="text" class="form-control" name="name"/>
-				                    </div>
-					    		</div>
-					    		<div class="form-group">
-					    			<label class="col-sm-3 control-label">Price</label>
-						    		<div class="col-sm-8">
-				                        <input type="text" class="form-control" name="price"/>
-				                    </div>
-					    		</div>
-					    		<div class="form-group">
-					    			<label class="col-sm-3 control-label">Description</label>
-						    		<div class="col-sm-8">
-				                        <textarea type="text" class="form-control" name="description"></textarea>
-				                    </div>
-					    		</div>
-
-					    		<div class="form-group">
-					    			<label class="col-sm-3 control-label">Upload Image</label>
-						    		<div class="col-sm-8">
-				                        <input type="file" class="form-control" name="image"/>
-				                    </div>
-					    		</div>
-					    		
-					    	<!-- STRECH GOALS -->
-					    		<!-- <div class="form-group">
-					    			<label  class="col-sm-3 control-label">Categories</label>
-						    		<div class="dropdown col-sm-3">
-										<select name="categories" class="form-control">
-											<option name="cat">Cat</option>
-											<option name="dog">Dog</option>
-											<option name="ndgt">Neil deGrasse Tyson</option>
-										</select>
-									</div>
-					    		</div> -->				
-								<div class="modal-footer">
-							    	<button type="submit" class="btn btn-success center-block">Add New Product</button>
-							    </div>
-						    </form>
-						</div>
-				    </div>
-				</div>
-			</div> 
-
 <div id="container">
-	<h4>Client Info:</h4>
-
+	<h3>Client Info:</h3>
+	<fieldset>
 	<h4><%= @client.name %></h4>
 	<h4><%= @client.address_line1 %></h4>	
 	<% if @client.address_line2 %>
 		<h4><%= @client.address_line2 %></h4>
 	<% end %>
 	<h4><%= @client.city %>, <%= @client.state %> <%= @client.zip %></h4>
+	</fieldset>
 
 	<h4>Outstanding Invoices</h4>
 	<table class="table table-bordered">
