--- a/app/views/dashboards/_modal.html.erb
+++ b/app/views/dashboards/_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- add new product button via MODAL.js from bootstrap-->
-<a data-toggle="modal" data-target="#addModal<%= client.id %>"><%= client.address_line1 %></a>
+<a data-toggle="modal" data-target="#addModal<%= client.id %>"><%= client.address_line1 %> <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></a>
                 <!-- Modal for "Add New Product" -->
 <!DOCTYPE html>
 <html lang="en">
