--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,98 +1,122 @@
-<h4>Add a New Client</h4>
 
-<form action="/clients" method="post">
-	<%=token_tag nil %>
-	<input type="hidden" name="client[company_id]" value="<%= session[:company_id] %>">
-    <p>
-      <label>Name:</label>
-      <input type="text" name="client[name]">
-    </p>
-    <p>
-      <label>Address Line 1:</label>
-      <input type="text" name="client[address_line1]">
-    </p>
-    <p>
-      <label>Address Line 2:</label>
-      <input type="text" name="client[address_line2]">
-    </p>    
-    <p>
-      <label>City</label>
-      <input type="text" name="client[city]">
-      <label>State</label>
-		<select name="client[state]" size="1">
-		  <option value="AK">AK</option>
-		  <option value="AL">AL</option>
-		  <option value="AR">AR</option>
-		  <option value="AZ">AZ</option>
-		  <option value="CA">CA</option>
-		  <option value="CO">CO</option>
-		  <option value="CT">CT</option>
-		  <option value="DC">DC</option>
-		  <option value="DE">DE</option>
-		  <option value="FL">FL</option>
-		  <option value="GA">GA</option>
-		  <option value="HI">HI</option>
-		  <option value="IA">IA</option>
-		  <option value="ID">ID</option>
-		  <option value="IL">IL</option>
-		  <option value="IN">IN</option>
-		  <option value="KS">KS</option>
-		  <option value="KY">KY</option>
-		  <option value="LA">LA</option>
-		  <option value="MA">MA</option>
-		  <option value="MD">MD</option>
-		  <option value="ME">ME</option>
-		  <option value="MI">MI</option>
-		  <option value="MN">MN</option>
-		  <option value="MO">MO</option>
-		  <option value="MS">MS</option>
-		  <option value="MT">MT</option>
-		  <option value="NC">NC</option>
-		  <option value="ND">ND</option>
-		  <option value="NE">NE</option>
-		  <option value="NH">NH</option>
-		  <option value="NJ">NJ</option>
-		  <option value="NM">NM</option>
-		  <option value="NV">NV</option>
-		  <option value="NY">NY</option>
-		  <option value="OH">OH</option>
-		  <option value="OK">OK</option>
-		  <option value="OR">OR</option>
-		  <option value="PA">PA</option>
-		  <option value="RI">RI</option>
-		  <option value="SC">SC</option>
-		  <option value="SD">SD</option>
-		  <option value="TN">TN</option>
-		  <option value="TX">TX</option>
-		  <option value="UT">UT</option>
-		  <option value="VA">VA</option>
-		  <option value="VT">VT</option>
-		  <option value="WA">WA</option>
-		  <option value="WI">WI</option>
-		  <option value="WV">WV</option>
-		  <option value="WY">WY</option>
-		</select>
-	</p>
-     <p>
-      <label>Zip Code</label>
-      <input type="text" name="client[zip]">
-    </p>	
-     <p>
-      <label>Email:</label>
-      <input type="text" name="client[email]">
-    </p>
-    <p>
-      <label>Phone Number</label>
-      <input type="text" name="client[phone]">
-    </p>
-    <p>
-      <label>Password:</label>
-      <input type="password" name="client[password]">
-    </p>
-    <p>
-      <label>Confirm Password:</label>
-      <input type="password" name="client[password_confirmation]">
-    </p>
-    <button type="submit" value="Add">Add</button>
- </form>
+	<ol class="breadcrumb">
+		<li><a href="/companies">Company Dashboard</a></li>
+		<li class="active">Create New Client</li>
+	</ol>
+
+<h1 class="text-center">Add a New Client</h1>
+
+<div class="row">
+
+	<div class="col-md-8 col-md-offset-2">
+
+	<form action="/clients" method="post">
+
+		
+		<%=token_tag nil %>
+		<input type="hidden" name="client[company_id]" value="<%= session[:company_id] %>">
+	    <div class="form-group">
+	      <label for="client[name]">Name:</label>
+	      <input type="text" class="form-control" name="client[name]">
+	    </div>
+	    <div class="form-group">
+	      <label for="client[address_line1]">Address Line 1:</label>
+	      <input type="text" class="form-control" name="client[address_line1]">
+	    </div>
+	    <div class="form-group">
+	      <label for="client[address_line2]">Address Line 2:</label>
+	      <input type="text" class="form-control" name="client[address_line2]">
+	    </div>    
+
+	    <div class="form-group">
+	      <label for="client[city]" class="control-label">City</label> 
+		      <input type="text" class="form-control" name="client[city]"> 
+		</div>
+
+		<div class="form-group">
+	      <label for="client[state]" class="control-label">State</label> 
+			<select name="client[state]" class="form-control" size="1">
+			  <option value="AK">AK</option>
+			  <option value="AL">AL</option>
+			  <option value="AR">AR</option>
+			  <option value="AZ">AZ</option>
+			  <option value="CA">CA</option>
+			  <option value="CO">CO</option>
+			  <option value="CT">CT</option>
+			  <option value="DC">DC</option>
+			  <option value="DE">DE</option>
+			  <option value="FL">FL</option>
+			  <option value="GA">GA</option>
+			  <option value="HI">HI</option>
+			  <option value="IA">IA</option>
+			  <option value="ID">ID</option>
+			  <option value="IL">IL</option>
+			  <option value="IN">IN</option>
+			  <option value="KS">KS</option>
+			  <option value="KY">KY</option>
+			  <option value="LA">LA</option>
+			  <option value="MA">MA</option>
+			  <option value="MD">MD</option>
+			  <option value="ME">ME</option>
+			  <option value="MI">MI</option>
+			  <option value="MN">MN</option>
+			  <option value="MO">MO</option>
+			  <option value="MS">MS</option>
+			  <option value="MT">MT</option>
+			  <option value="NC">NC</option>
+			  <option value="ND">ND</option>
+			  <option value="NE">NE</option>
+			  <option value="NH">NH</option>
+			  <option value="NJ">NJ</option>
+			  <option value="NM">NM</option>
+			  <option value="NV">NV</option>
+			  <option value="NY">NY</option>
+			  <option value="OH">OH</option>
+			  <option value="OK">OK</option>
+			  <option value="OR">OR</option>
+			  <option value="PA">PA</option>
+			  <option value="RI">RI</option>
+			  <option value="SC">SC</option>
+			  <option value="SD">SD</option>
+			  <option value="TN">TN</option>
+			  <option value="TX">TX</option>
+			  <option value="UT">UT</option>
+			  <option value="VA">VA</option>
+			  <option value="VT">VT</option>
+			  <option value="WA">WA</option>
+			  <option value="WI">WI</option>
+			  <option value="WV">WV</option>
+			  <option value="WY">WY</option>
+			</select> 
+		</div>
+
+		<div class="form-group">
+	      <label for="client[zip]" class="control-label">Zip Code</label>
+		      <input type="text" class="form-control" name="client[zip]">
+	    </div>
+		
+	
+	    <div class="form-group">
+	      <label for="client[email">Email:</label>
+	      <input type="text" class="form-control" name="client[email]">
+	    </div>
+	    <div class="form-group">
+	      <label for="client[phone]">Phone Number:</label>
+	      <input type="text" class="form-control" name="client[phone]" placeholder="(123) 456-7890">
+	    </div>
+	    <div class="form-group">
+	      <label for="client[password]">Password:</label>
+	      <input type="password" class="form-control" name="client[password]">
+	    </div>
+	    <div class="form-group">
+	      <label for="client[password_confirmation]">Confirm Password:</label>
+	      <input type="password" class="form-control" name="client[password_confirmation]">
+	    </div>
+		
+
+	    <button type="submit" value="Add" class="btn btn-warning btn-lg center-block">Create New Client</button>
+	</form>
+
+	</div>
+</div>
 
