--- a/app/views/dashboards/_dashboard_addinvoice.html.erb
+++ b/app/views/dashboards/_dashboard_addinvoice.html.erb
@@ -6,6 +6,7 @@
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="myModalLabel">Add New Invoice for <%= client.name %></h4>
 		    </div>
+		    <div class="modal-body">
 		    <!-- Error check -->
 		    <div class="has-error">
 			<% if flash[:errors] %>
@@ -22,33 +23,47 @@
 	    		<input type="hidden" name="invoice[client_id]" value="<%=client.id %>">
 	    		<input type="hidden" name="invoice[company_id]" value="<%=session[:company_id] %>">
 	    		
-	    		<div class="form-group">
-	    			<label class="col-sm-3 control-label">Send Date</label>
-		    		<div class="col-sm-8">
-                        <input type="date" class="form-control" name="invoice[sendDate]"/>
-                    </div>
-	    		</div>
-	    		<div class="form-group">
-	    			<label class="col-sm-3 control-label">Due By</label>
-		    		<div class="col-sm-8">
-                        <input type="date" class="form-control" name="invoice[due_by]"/>
-                    </div>
-	    		</div>
-	    		<div class="form-group">
-	    			<label class="col-sm-3 control-label">Description</label>
-		    		<div class="col-sm-8">
-                        <textarea type="text" class="form-control" name="invoice[description]"></textarea>
-                    </div>
-	    		</div>
-	    		<div class="form-group">
-	    			<label class="col-sm-3 control-label">Amount</label>
-		    		<div class="col-sm-8">
-                        <input type="number" class="form-control" name="invoice[amount]"/>
-                    </div>
-	    		</div>
+	    		<div class="form-horizontal">
+		    		<div class="form-group">
+		    			<label class="col-sm-3 control-label">Send Date</label>
+			    		<div class="col-sm-8">
+	                        <!-- <input type="date" class="form-control" name="invoice[sendDate]"/> -->
+					    	<%= date_select("invoice", "sendDate", order: [:month, :day, :year],  start_year: 2016) %>
+					   	</div>
+		    		</div>
+		    	</div>
+
+		    	<div class="form-horizontal">
+		    		<div class="form-group">
+		    			<label class="col-sm-3 control-label">Due By</label>
+			    		<div class="col-sm-8">
+	                        <!-- <input type="date" class="form-control" name="invoice[due_by]"/> -->
+	                        <%= date_select("invoice", "due_by", order: [:month, :day, :year],  start_year: 2016) %>
+	                    </div>
+		    		</div>
+		    	</div>
+
+		    	<div class="form-horizontal">
+		    		<div class="form-group">
+		    			<label class="col-sm-3 control-label">Description</label>
+			    		<div class="col-sm-8">
+	                        <textarea type="text" class="form-control" name="invoice[description]"></textarea>
+	                    </div>
+		    		</div>
+		    	</div>
+
+		    	<div class="form-horizontal">
+		    		<div class="form-group">
+		    			<label class="col-sm-3 control-label">Amount</label>
+			    		<div class="col-sm-8">
+	                        <input type="number" step="0.01" min=0 class="form-control" name="invoice[amount]" placeholder="$" />
+	                    </div>
+		    		</div>
+		    	</div>
+		    </div>
 
 				<div class="modal-footer">
-			    	<button type="submit" class="btn btn-success center-block">Send Invoice to <%= client.name %></button>
+			    	<button type="submit" class="btn btn-success center-block"> Send Invoice to <%= client.name %> <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></button>
 			    </div>
 		    </form>
 		</div>
