--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,6 +1,9 @@
+	<ol class="breadcrumb">
+		<li class="active">Company Dashboard</a></li>
+	</ol>
 <div class="text-center">
-	<h1>Welcome Company!</h1>
-	<a href="/companies/clients/new" class="btn btn-lg btn-warning">+ New Client</a> 
+	<h1>Welcome <%= @current_user.name %>!</h1>
+	<a href="/companies/clients/new" class="btn btn-lg btn-warning"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> New Client</a> 
 	
 </div>
 <%= render "dashboard_listing" %>
