--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Clients#edit</h1>
-<p>Find me in app/views/clients/edit.html.erb</p>
+<form action="/clients/update" method="post">
+	<%= token_tag nil %>
+	<input type="hidden" name="client_id" value="<%= @client.id%>">
+	<label>Company Name: <input type="text" name="name" value="<%= @client.name %>"></label>
+	<label>Address: <input type="text" name="address_line1" value="<%= @client.address_line1%>"></label>
+	<input type="text" name="address_line2" value="<%= @client.address_line2%>">
+	<label>City: <input type="text" name="city" value="<%= @client.city%>"></label>
+	<label>State: <input type="text" name="state" value="<%= @client.state%>"></label>
+	<label>Zip Code: <input type="text" name="zip" value="<%= @client.zip%>"></label>
+	<label>Phone Number: <input type="text" name="phone" value="<%= @client.phone%>"></label>
+	<button>Update Info</button>
+</form>
