--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
 	<h1>Welcome Company!</h1>
-	<a href="/companies/clients/new" class="btn btn-lg btn-warning">+ New Client</a> 
-	
+	<a href="/companies/clients/new" class="btn btn-lg btn-warning">+ New Client</a>
+	<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
 </div>
 <%= render "dashboard_listing" %>
 <%= render "dashboard_unpaid" %>
