Commiting so I can work on other branch

--- a/app/views/dashboards/_dashboard_listing.html.erb
+++ b/app/views/dashboards/_dashboard_listing.html.erb
@@ -32,7 +32,7 @@
 				</button>
 				<%= render partial: "dashboard_addinvoice", locals: { client: client } %>
 			</td>			
-			<td><a href="/companies/clients/<%= client.id %>/edit" class="btn btn-lg btn-primary">Update Info</a></td>
+			<td><a href="/companies/clients/<%= client.id %>/edit" class="btn btn-lg btn-primary">Update Client</a></td>
 		</tr>
 	<% end %>
 	</tbody>
