--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,3 +45,13 @@ footer {
 	padding-right: 1em;
 	color: #CCC;
 }
+
+.breadcrumb {
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.navbar-brand {
+	font-weight: bold;
+	letter-spacing: 1px;
+}
