fixed dashboard_listing to have correct client.id when add_invoice is pushed. Also added reports controller and page

--- a/app/views/dashboards/_dashboard_addinvoice.html.erb
+++ b/app/views/dashboards/_dashboard_addinvoice.html.erb
@@ -1,5 +1,5 @@
-<!-- Modal for "Add New Product" -->
-<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<!-- Modal for "Add New Invoice" -->
+<div class="modal fade" id="addInvoiceModal<%= client.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	<div class="modal-dialog" role="document">
 	    <div class="modal-content">
 		    <div class="modal-header">
