--- a/app/views/reports/threeq.html.erb
+++ b/app/views/reports/threeq.html.erb
@@ -1,10 +1,20 @@
 <div class="text-center">
-	<h3>Total Paid Invoice for 2016: <span style="color:#1AC262"><%= @total %></span></h3>
+	<h1> <span style="color:#73C5E8"><%= @company.name %></span> Reports</h1>
 </div>
-<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
-<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
-<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
-<a href="/companies/reports" class="btn btn-lg btn-success">Reports</a> 
+
+<div class="text-center">
+	<h3>Total Paid Invoice for 2016: <span style="color:#1AC262"><%= @total %></span></h3>
+	<h3>3rd Quarter for 2016: <span style="color:#D5D412"><%= @total3 %></span></h3>
+</div>
+<div class="text-center">
+	<h4>Quaterly: 
+	<a href="/companies/reports" class="btn btn-sm btn-danger">Yearly</a> 
+	<a href="/companies/reports/1st" class="btn btn-sm btn-warning">1st</a> 
+	<a href="/companies/reports/2nd" class="btn btn-sm btn-warning">2rd</a> 
+	<a href="/companies/reports/4th" class="btn btn-sm btn-warning">4th</a> 
+	</h4>
+</div>
+
 <% if @invoices == [] %>
 	<h3>You currently have no paid Invoices.</h3>
 <% else %>
