Prepping for development pull

--- a/app/views/dashboards/_dashboard_unpaid.html.erb
+++ b/app/views/dashboards/_dashboard_unpaid.html.erb
@@ -24,7 +24,7 @@
 			<td>$<%= unpaid.amount %></td>
 			<td><%= unpaid.description %></td>
 			<td class="text-right">
-				<button class="btn btn-success btn-sm" data-toggle="check_modal<%= unpaid.id %>" data-target="#addCheck<%= unpaid.id %>"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><strong>$</strong> Record Check
+				<button class="btn btn-success btn-sm" data-toggle="check_modal<%= unpaid.id %>" data-target="#addCheck<%= unpaid.id %>"><strong>+$</strong> Record Check
 				</button>
 				<button class="btn btn-primary btn-sm" data-toggle="edit_modal<%= unpaid.id %>" data-target="#Invoice<%= unpaid.id %>"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Invoice
 				</button>
