--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,3 +55,14 @@ footer {
 	font-weight: bold;
 	letter-spacing: 1px;
 }
+
+#invoice_wrapper {
+	border: 1px solid #CCC;
+	padding: 4em;
+	margin-top: 2em;
+}
+
+.btn-print {
+	background-color: #AAA;
+	color: #FFF;
+}
