--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -29,20 +29,23 @@
 		<%= @client.city %>, <%= @client.state %> <%= @client.zip %>
 	</address>
 
-	<h3>Outstanding Invoices</h3>
+	<% if session[:company_id] %>
+		<h3>Outstanding Invoices</h3>
+	<% else %>
+		<h3>Outstanding Invoices for <%= @client.company.name %></h3>
+	<% end %>
 	<% if @out == [] %>
 		<h4>You currently have no outstanding invoices</h4>
 	<% else %>
-	<table class="table table-striped table-hover">
+	<table class="table table-hover">
 		<thead>
 			<tr>
-				<th>Invoice Number</th>
-				<th>Company Name</th>
+				<th>Invoice #</th>
+				<th>Send Date</th>
+				<th>Due Date</th>
 				<th>Description</th>
 				<th>Amount</th>
-				<th>Send Date</th>
-				<th>Due By Date</th>
-				<th>Action</th>
+				<th>Payment Method</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -50,19 +53,17 @@
 			<% @out.each do |out| %>
 				<tr>
 					<td><%= out.id %></td>
-					<td><%= out.company.name %></td>
-					<td><%= out.description %></td>
-					<td>$<%= out.amount %></td>
 					<td><%= out.sendDate%></td>
 					<td><%= out.due_by%></td>
-					<td>
-						<form action="/charges/new">
+					<td><%= out.description %></td>
+					<td>$<%= out.amount %></td>
+					<td class="text-right">
+						<form action="/charges/new" style="display: inline-block">
 							<input type="hidden" name="invoice_id" value="<%= out.id %>">
 							<input type="hidden" name="invoice_amt" value="<%= out.amount %>">
-							<button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>Pay by Stripe</button>
+							<button type="submit" class="btn btn-info btn-sm"><span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span> Credit Card</button>
 						</form>
-						<button class="btn btn-info"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> By Check</button>
-						<button class="btn btn-info"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> View Invoice</button>
+						<button class="btn btn-info btn-sm"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Check</button>
 					</td>
 				</tr>
 			<% end %>
@@ -71,19 +72,22 @@
 	</table>
 	<% end %>
 
-	<h3>Paid Invoices</h3>
+	<% if session[:company_id] %>
+		<h3>Paid Invoices</h3>
+	<% else %>
+		<h3>Paid Invoices for <%= @client.company.name %></h3>
+	<% end %>
 	<% if @paid == [] %>
 		<h4>You currently have no paid invoices</h3>
 	<% else %>
-	<table class="table table-bordered">
+	<table class="table table-hover">
 		<thead>
 			<tr>
-				<th>Invoice Number</th>
-				<th>Company Name</th>
+				<th>Invoice #</th>
+				<th>Paid Date</th>
 				<th>Description</th>
 				<th>Amount</th>
-				<th>Paid Date</th>
-				<th>Action</th>
+				<th>Actions</th>
 
 			</tr>
 		</thead>
@@ -91,12 +95,11 @@
 			<% @paid.each do |paid| %>
 				<tr>
 					<td><%= paid.id %></td>
-					<td><%= paid.company.name %></td>
+					<td><%= paid.paid_date %></td>
 					<td><%= paid.description %></td>
 					<td>$<%= paid.amount %></td>
-					<td><%= paid.paid_date %></td>
 					<td>
-						<button><a href="">View Invoice</a></button>
+						<button class="btn btn-info btn-sm"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span> View</button>
 					</td>
 				</tr>
 			<% end %>
