--- a/app/views/reports/year.html.erb
+++ b/app/views/reports/year.html.erb
@@ -4,6 +4,12 @@
 		<li><a href="/companies/reports">Reports</a></li>
 		<li class="active">Year <%= params[:id] %></li>
 	</ol>
+<% elsif session[:client_id] %>
+	<ol class="breadcrumb">
+		<li><a href="/clients">Client Dashboard</a></li>
+		<li><a href="/clients/reports">Reports</a></li>
+		<li class="active">Year <%= params[:id] %></li>
+	</ol>
 <% end %>
 
 	<h1 class="text-center"><%= @current_user.name %></h1>
@@ -54,6 +60,7 @@
 	<thead>
 		<tr>
 			<th>Invoice #</th>
+			<th>Status</th>
 			<th>Client Name</th>
 			<th>Date Paid</th>
 			<th>Payment Info</th>
@@ -63,7 +70,19 @@
 	<tbody>
 		<% @invoices.each do |paid| %>
 		<tr>
-			<td><%= paid.id %></td>
+			<% if session[:client_id] %>
+				<% @url_root = "/clients/invoices/" %>
+			<% elsif session[:session_id] %>
+				<% @url_root = "/companies/invoices/" %>
+			<% end %>
+			<td><a href="<%= @url_root %><%= paid.id %>"><%= paid.id %> <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></td>
+			<td>
+				<% if paid.paid_date < paid.due_by %>
+					<strong class="text-success">Paid On Time</strong>
+				<% elsif paid.paid_date > paid.due_by %>
+					<strong class="text-warning">Paid Late</strong>
+				<% end %>
+			</td>
 			<td><%= paid.client.name %></td>
 			<td><%= paid.paid_date %></td>
 			<td>
@@ -77,7 +96,7 @@
 		</tr>
 		<% end %>
 		<tr>
-			<td colspan="4" class="text-right" style="font-size: large">Total Earnings: </td>
+			<td colspan="5" class="text-right" style="font-size: large">Total Earnings: </td>
 			<td style="font-weight: bold; font-size: large">$<%= @total %></td>
 		</tr>
 	</tbody>
