--- a/app/views/application/_nav_basic.html.erb
+++ b/app/views/application/_nav_basic.html.erb
@@ -37,7 +37,7 @@
              <input type="hidden" name="_method" value="delete">
              <div class="form-group">
                <strong class="text-muted text-login">Logged in as <%= @current_user.name %> </strong>
-               <button type='submit' value='Log Out' class="btn btn-sm btn-default">Sign Out <span class="glyphicon glyphicon-sign-out" aria-hidden="true"></span></button>
+               <button type='submit' value='Log Out' class="btn btn-sm btn-default">Sign Out <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
              </div>ccc
            </form> 
 
