Added modal functionality to delete button

--- a/app/views/dashboards/_dashboard_listing.html.erb
+++ b/app/views/dashboards/_dashboard_listing.html.erb
@@ -37,7 +37,10 @@
 	                <button type='submit' class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Client</button>
 	            </form>
 			<% else %>
-	                <button type='submit' class="btn btn-sm btn-danger delete_error"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Client</button>
+					<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+	                <button data-toggle="modal" data-target="#deleteInvoiceModal<%= client.id %>" type='submit' class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Client</button>
+
+			<%= render partial: "dashboard_deleteinvoice", locals: { client: client } %>
 			<% end %>	
 	        </td>
 
